# Dynamic3dMeshDenoiser

./: .gitignore  CMakeLists.txt  PROJECT_CONTEXT_FOR_LLM.md  README.md  build.bat  build_dev.bat  build_release.bat
build_release/: ALL_BUILD.vcxproj  BilateralMeshDenoiser.vcxproj  Dynamic3DMeshDenoiser.sln  TemporalMeshDenoiser.vcxproj  ZERO_CHECK.vcxproj
src/: BilateralMeshDenoiser.cpp  TemporalMeshDenoiser.cpp
ui/: dynamic3dmesh_denoiser_ui.py
